<resources>
    <string name="app_name">Prototype0</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="button1">language 1</string>
    <string name="button2">language 2</string>
    <string name="repeat_button"></string>
    <string name="radio_english">English</string>
    <string name="radio_spanish">Spanish</string>
    <string name="secondPageBtn">Home Page</string>
    <string name="second_page">My Daily Life</string>
    <string name="textView_lang1">My language text</string>
    <string name="textView_lang2">Foreign language text</string>
    <string name="select_language">Select Language</string>


</resources>
