<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        theme="@style/AppTheme.AppBarOverlay"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEBE9"
        android:backgroundTint="#EFEBE9"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle"
            android:backgroundTint="#B71C1C"
            android:text="@string/button1"
            android:textColor="#ffffff"
            android:textColorHint="#00F7F6F6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondPageBtn"
            app:layout_constraintVertical_bias="0.445"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="28dp"
            android:background="@android:drawable/ic_menu_revert"
            android:backgroundTint="#B4C27272"
            android:text="@string/repeat_button"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toEndOf="@+id/button"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#B71C1C"
            android:backgroundTint="#B71C1C"
            app:layout_constraintBottom_toTopOf="@+id/secondPageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle"
            android:backgroundTint="#EFEBE9"
            android:rotation="180"
            android:text="@string/button2"
            android:textColor="#6D4C41"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider"
            app:layout_constraintVertical_bias="0.651"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <TextView
            android:id="@+id/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="#FAFAFA"
            android:backgroundTint="#FAFAFA"
            android:text="@string/textView_lang1"
            android:textAlignment="inherit"
            android:textColor="#6D4C41"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/simpleTextView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="39dp"
            android:background="#FAFAFA"
            android:backgroundTint="#FAFAFA"
            android:rotation="180"
            android:text="@string/textView_lang2"
            android:textAlignment="inherit"
            android:textColor="#6D4C41"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/secondPageBtn"

            android:layout_width="131dp"
            android:layout_height="50dp"
            android:background="#BCAAA4"
            android:backgroundTint="#BCAAA4"
            android:text="@string/second_page"
            android:textColor="#6D4C41"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.459" />

        <!--        <ListView-->
        <!--            android:id="@+id/simpleListView"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:divider="#ffffff"-->
        <!--            android:dividerHeight="1dp"-->
        <!--            android:footerDividersEnabled="false"-->
        <!--            app:layout_constraintBottom_toTopOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEBE9"
        android:backgroundTint="#EFEBE9"
        android:visibility="invisible"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B71C1C"
            android:backgroundTint="#B71C1C"
            android:text="@string/select_language"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textDirection="anyRtl"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_spanish"
            android:textColorLink="#B71C1C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_english"
            android:textColorLink="#B71C1C"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEBE9"
        android:backgroundTint="#EFEBE9"
        android:visibility="invisible"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B71C1C"
            android:backgroundTint="#B71C1C"
            android:text="@string/select_language"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textDirection="anyRtl"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioSpanish1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_spanish"
            android:textColorLink="#B71C1C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioEnglish1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_english"
            android:textColorLink="#B71C1C"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>


</androidx.coordinatorlayout.widget.CoordinatorLayout>